--- a/SPA-Series-Backend/src/main/resources/application.properties
+++ b/SPA-Series-Backend/src/main/resources/application.properties
@@ -1,20 +1,25 @@
 spring.application.name=SPA-Series-Backend
-# Configuraci髇 de la base de datos PostgreSQL
+
+# Configuraci贸n de la base de datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/seriesdb
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuraci髇 de JPA/Hibernate
+# Configuraci贸n de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuraci髇 del servidor
+# Configuraci贸n del servidor
 server.port=8080
 
-# Configuraci髇 CORS para Angular
+# Configuraci贸n CORS para Angular
 spring.web.cors.allowed-origins=http://localhost:4200
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=* 
+spring.web.cors.allowed-headers=*
+
+# Configuraci贸n adicional para asegurar la detecci贸n del driver
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5 
